--- a/app/views/layouts/backup.html.erb
+++ b/app/views/layouts/backup.html.erb
@@ -5,13 +5,16 @@
     <%= stylesheet_link_tag    "application", media: "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
-    <%= render "layouts/shim" %>
+    <%= render 'layouts/shim' %>
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-  <%= render "layouts/header" %>
+  <%= render 'layouts/header' %>
     <div class="container">
       <%= yield %>
-      <%= render "layouts/footer" %>
+        <%= render 'layouts/footer' %>
     </div>
   </body>
 </html>
