Finish user signup

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,14 @@
 <% provide(:title, @user.name) %>
-<h1><%= @user.name %></h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="row">
+  <aside class="span4">
+    <section></section>
+      <h1>
+        <%= gravatar_for @user %>
+        <%= @user.name %>
+      </h1>
+
+    <p>Find me in app/views/users/show.html.erb</p>
+    </section>
+  </aside>
+</div>
 <%= @user.name %>, <%= @user.email %>
