Sign Up with exercises

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,16 @@
 <% provide(:title, @user.name) %>
-<<<<<<< HEAD
+
 <h1><%= @user.name %></h1>
 <p>Find me in app/views/users/show.html.erb</p>
-=======
+
 <div class="row">
   <aside class="span4">
-    <section></section>
+    <section>
       <h1>
         <%= gravatar_for @user %>
         <%= @user.name %>
       </h1>
-
-    <p>Find me in app/views/users/show.html.erb</p>
     </section>
   </aside>
 </div>
->>>>>>> sign-up
-<%= @user.name %>, <%= @user.email %>
+#<%= @user.name %>, <%= @user.email %>
