--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,13 +5,11 @@
 
 <div class="row">
   <aside class="span4">
-    <section></section>
+    <section>
       <h1>
         <%= gravatar_for @user %>
         <%= @user.name %>
       </h1>
-
-    <p>Find me in app/views/users/show.html.erb</p>
     </section>
   </aside>
 </div>
